# ros2_pyside6_gui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
src/pyside6_gui/: README.md  package.xml  setup.cfg  setup.py
src/pyside6_gui/config/: params.yml
src/pyside6_gui/launch/: pyside6_gui_launch.py
src/pyside6_gui/scripts/: manager.py  mavlink.py  mavros.py  pyside6_gui_node.py  request.py
src/pyside6_gui/scripts/OSMBuildings/: Main.qml  OSMCameraController.qml  customshadertiles.frag  main.qrc  qmldir
