<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>pyside6_gui</name>
  <version>0.0.1</version>
  <description>TODO</description>

  <maintainer email="todo@TODO.com">TODO</maintainer>
  <author email="todo@TODO.com">TODO</author>

  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
